# templatron

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build-and-publish-image.yaml  lint-and-test.yaml  semantic-release.yaml
filesync/: commit_template.py
templatron/: __init__.py  cli.py  commit_template.py  exceptions.py  log_or_print.py  templatron.py
templatron/config/: base_config.py  click_yaml_provider.py  logging_config.py  template_config.py  templatron_config.py
templatron/repo/: base_repo.py  repository.py  template.py
test/: test_cli.py  test_log_or_print.py  test_templatron.py
test/test_config/: test_base_config.py  test_click_yaml_provider.py  test_logging_config.py  test_template_config.py
test/test_repo/: test_base_repo.py  test_repository.py  test_template.py
